bdr.BDR.scala.error
Compilation error:
BDR:4: error: not found: value Null
while (m!=Null){
          ^